# A barebones manual .toml file 
[project]
name = "example-pyproject"
# If under development, do like 0.0.1a1 rather than 0.0.1
version = "0.0.1a1"
license = "MIT"
license_file = "pretend_LICENSE.txt"
authors = [{name = "Blueberry Pancakes", email = "pancakes@gmail.com"}]
keywords = ["pancake_recipes", "recipes", "automated_pancakes"]
requires-python = ">=3.10.12"
